style: Minor spacing fixes

--- a/src/components/Nft/Nft.css
+++ b/src/components/Nft/Nft.css
@@ -67,7 +67,7 @@
 {
     .nft
     {
-        width: 75%;
+        width: 90%;
         margin: auto;
         height: auto;
         padding: 3.33vw;
