--- a/src/components/TopNav/TopNav.css
+++ b/src/components/TopNav/TopNav.css
@@ -93,7 +93,7 @@
     #top-nav ul li
     {
         list-style-type: none;
-        font-size: 2.2vw;
+        font-size: 2.7vw;
     }
 
     #top-nav a,
